--- a/src/views/index.html
+++ b/src/views/index.html
@@ -5,7 +5,7 @@
       <title>Exercise Tracker | Free Code Camp</title>
       <link rel="shortcut icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon"/>
       <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-      <link href="/stylesheets/style.css" rel="stylesheet" type="text/css">
+      <link href="../public/stylesheets/style.css" rel="stylesheet" type="text/css">
    </head>
 
    <body>
@@ -20,7 +20,7 @@
           <form action="/api/exercise/add" method="post">
             <h3>Add exercises</h3>
             <p><code>POST /api/exercise/add</code></p>
-            <input id="uid" type="text" name="userId" placeholder="userId*">
+            <input id="uid" type="text" name="userId" required placeholder="userId*">
             <input id="desc" type="text" name="description" placeholder="description*">
             <input id="dur" type="text" name="duration" placeholder="duration* (mins.)">
             <input id="dat" type="text" name="date" placeholder="date (yyyy-mm-dd)">
